--- a/client/src/components/Reports/ReportView.scss
+++ b/client/src/components/Reports/ReportView.scss
@@ -1,5 +1,5 @@
 .Report.ReportView {
-  .header {
+  .reportHeader {
     margin-bottom: 40px;
 
     .InstanceCount {
